# tybot

./: .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc  Dockerfile.bot  Dockerfile.cli  Makefile  README.md  docker-compose.yml  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
bot/: chat.py  config.yaml  main.py  pyproject.toml
bot/.chainlit/: config.toml
cli/: main.py  pyproject.toml
client/: .dockerignore  .env  eslint.config.js  eslint.config.ts  i18next.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/src/: app.tsx  i18n.ts  index.css  main.tsx  (+2 more)
docker/: .env.example  docker-compose.yaml
docs/: CHANGELOG.md  README.md  RELENG.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
migrations/: 0001_initdb.sql
server/: .dockerignore  .env.example  alembic.ini  pyproject.toml
server/src/alembic/: env.py  script.py.mako
server/src/alembic/versions/: 0001.py  0002.py  0003.py
server/src/server/: __init__.py  main.py
server/src/server/app/: agent.py  collections.py
server/src/server/app/agents/: agent.py  chat.py  react.py
server/src/server/app/agents/chat/: agent.py  nodes.py  state.py  tools.py
server/src/server/app/agents/middlewares/: tool_monitoring.py
server/src/server/app/agents/tools/: __init__.py  geo.py  math.py
server/src/server/app/services/: agents.py  create_thread.py  run_agent.py  runs.py  threads.py
server/src/server/app/services/agents/: run.py
server/src/server/app/services/runs/: create.py  read.py
server/src/server/app/services/threads/: create.py  read.py
server/src/server/core/: __init__.py  entities.py  injector.py  lifespan.py  logger.py  settings.py
server/src/server/infra/api/: api_router.py  router.py
server/src/server/infra/api/agents/: agents_router.py  router.py
server/src/server/infra/api/collections/: router.py  validators.py
server/src/server/infra/api/greetings/: greetings_router.py
server/src/server/infra/api/runs/: router.py
server/src/server/infra/api/threads/: router.py
server/src/server/infra/db/: models.py
server/src/server/infra/db/repositories/: collections.py  runs.py  threads.py
server/src/server/infra/llm/: client.py  model.py
server/static/: swagger.css  swagger.js
(+236 files in other folders)
