[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "server"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-langgraph",
    "alembic",
    "fastapi[standard]",
    "langchain-ollama",
    "psycopg2-binary",
    "pydantic-settings",
    "sqlmodel",
]

[project.scripts]
server = "server:main"
